Add background music track

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ footer a{color:#DAA520;text-decoration:none}
 
 <!-- BACKGROUND MUSIC -->
 <audio id="bg-music" loop preload="none">
-  <!-- Add music source here: <source src="mix.mp3" type="audio/mpeg"> -->
+  <source src="music.mp3" type="audio/mpeg">
 </audio>
 
 <!-- MAIN CONTENT -->
