--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <meta name="twitter:image" content="https://diasport.world/flyer-original.jpg">
 <link rel="canonical" href="https://diasport.world">
 <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%23DAA520'/></svg>">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@600;700&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 html{scroll-behavior:smooth}
@@ -24,7 +27,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Hiragino Sa
 /* SPLASH */
 #splash{position:fixed;inset:0;z-index:100;background:linear-gradient(180deg,#6bbfea 0%,#87CEEB 40%,#a8d8f0 100%);display:flex;flex-direction:column;align-items:center;justify-content:center;cursor:pointer;transition:opacity .6s,visibility .6s}
 #splash.hidden{opacity:0;visibility:hidden;pointer-events:none}
-#splash img{max-width:85vw;max-height:60vh;width:auto;height:auto;object-fit:contain;border-radius:12px;box-shadow:0 8px 32px rgba(0,0,0,.2)}
+#splash img{max-width:92vw;max-height:80vh;width:auto;height:auto;object-fit:contain;border-radius:12px;box-shadow:0 8px 32px rgba(0,0,0,.2)}
 #splash .tap{margin-top:1.5rem;font-size:1.1rem;letter-spacing:.18em;text-transform:uppercase;color:#fff;text-shadow:0 1px 6px rgba(0,0,0,.3);animation:pulse 2s ease-in-out infinite}
 #splash .tap-jp{margin-top:.4rem;font-size:.85rem;color:rgba(255,255,255,.8);letter-spacing:.1em}
 @keyframes pulse{0%,100%{opacity:1}50%{opacity:.35}}
@@ -39,10 +42,10 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Hiragino Sa
 #main.visible{opacity:1}
 
 .hero{text-align:center;padding:2rem 1rem 0}
-.hero img{width:100%;max-width:520px;border-radius:12px;box-shadow:0 6px 24px rgba(0,0,0,.15)}
+.hero img{width:100%;max-width:480px;border-radius:12px;box-shadow:0 6px 24px rgba(0,0,0,.15)}
 
 .details{max-width:520px;margin:2rem auto;padding:0 1.5rem}
-.details h1{font-size:2rem;color:#1a1a1a;margin-bottom:.15rem;letter-spacing:.02em}
+.details h1{font-family:'Fredoka',sans-serif;font-size:2.8rem;color:#DAA520;margin-bottom:.15rem;letter-spacing:.04em;text-shadow:0 3px 0 #b8860b,0 6px 12px rgba(0,0,0,.12)}
 .details .crew{font-size:1.1rem;color:#555;margin-bottom:1.5rem}
 .details .info{list-style:none;padding:0}
 .details .info li{padding:.6rem 0;border-bottom:1px solid rgba(0,0,0,.06);font-size:1rem;display:flex;gap:.7rem;align-items:baseline}
@@ -58,7 +61,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Hiragino Sa
 .map a:active{transform:scale(.98)}
 
 .newsletter{max-width:520px;margin:2.5rem auto;padding:0 1.5rem}
-.newsletter h2{font-size:1.2rem;margin-bottom:.4rem;color:#333}
+.newsletter h2{font-family:'Fredoka',sans-serif;font-size:1.4rem;margin-bottom:.4rem;color:#333}
 .newsletter p{font-size:.9rem;color:#666;margin-bottom:1rem}
 .newsletter form{display:flex;gap:.5rem}
 .newsletter input[type=email]{flex:1;padding:.8rem 1rem;border:2px solid #ddd;border-radius:10px;font-size:1rem;outline:none;transition:border .2s}
@@ -76,11 +79,11 @@ footer a{color:#DAA520;text-decoration:none}
 .countdown .label{font-size:.85rem;text-transform:uppercase;letter-spacing:.12em;color:#888;margin-bottom:.5rem}
 .countdown .timer{display:flex;justify-content:center;gap:1rem}
 .countdown .unit{display:flex;flex-direction:column;align-items:center}
-.countdown .unit .num{font-size:2rem;font-weight:700;color:#DAA520;line-height:1}
+.countdown .unit .num{font-family:'Fredoka',sans-serif;font-size:2.2rem;font-weight:700;color:#DAA520;line-height:1;text-shadow:0 2px 0 #b8860b}
 .countdown .unit .txt{font-size:.7rem;text-transform:uppercase;letter-spacing:.08em;color:#999;margin-top:.2rem}
 
 @media(max-width:400px){
-  .details h1{font-size:1.5rem}
+  .details h1{font-size:2rem}
   .countdown .unit .num{font-size:1.5rem}
 }
 </style>
