Remove duplicate title, add logo to footer, newsletter setup guide

--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@ body{font-family:'Space Grotesk',-apple-system,BlinkMacSystemFont,'Hiragino Sans
 
 /* Title */
 .title-block{text-align:center;padding:2.5rem 0 1.5rem}
-.title-block h1{font-size:3.5rem;font-weight:700;color:#fff;letter-spacing:.04em;text-shadow:0 2px 8px rgba(0,0,0,.15);line-height:1.1;margin-bottom:.8rem}
-.title-block .tagline{font-size:1.1rem;color:rgba(0,0,0,.55);font-style:italic;line-height:1.6}
-.title-block .tagline-jp{font-size:.95rem;color:rgba(0,0,0,.35);font-style:italic;margin-top:.3rem}
+.title-block .tagline{font-size:1.2rem;color:rgba(0,0,0,.6);font-style:italic;line-height:1.6}
+.title-block .tagline-jp{font-size:1rem;color:rgba(0,0,0,.4);font-style:italic;margin-top:.4rem}
 
 /* Description */
 .desc-block{padding:1.5rem 0}
@@ -125,6 +124,8 @@ body{font-family:'Space Grotesk',-apple-system,BlinkMacSystemFont,'Hiragino Sans
 .notice{padding:2rem 0;font-size:.75rem;color:rgba(0,0,0,.25);line-height:1.6}
 .notice p{margin-bottom:.2rem}
 footer{text-align:center;padding:2rem 0 3rem;font-size:.75rem;color:rgba(0,0,0,.25)}
+footer .footer-logo{width:min(50vw,200px);margin-bottom:1rem;border-radius:8px}
+footer p{margin:0}
 footer a{color:var(--gold-dark);text-decoration:none}
 
 /* Scroll reveal */
@@ -184,7 +185,6 @@ footer a{color:var(--gold-dark);text-decoration:none}
 
   <div class="content">
     <div class="title-block">
-      <h1>Diasport</h1>
       <p class="tagline">Music doesn't stay where it's born. Neither did we.</p>
       <p class="tagline-jp">音は旅をする。わたしたちと同じように。</p>
     </div>
@@ -259,7 +259,10 @@ footer a{color:var(--gold-dark);text-decoration:none}
       <p>*音声と会場の雰囲気を記録して、後日オンラインで共有予定です</p>
     </div>
 
-    <footer>© 2026 Diasport</footer>
+    <footer>
+      <img src="diasport-logo.jpg" alt="Diasport" class="footer-logo">
+      <p>© 2026 Diasport</p>
+    </footer>
   </div>
 </div>
 
