Fix: Amaterrace DJys (not Amateras), replace logo image

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-<title>Diasport — Amateras DJs and Friends</title>
-<meta name="description" content="Diasport — DJ event by Amateras DJs and Friends. Friday 27 Feb 2026, 19:00–22:00 at RecordCity, Nishi-Shinjuku, Tokyo.">
-<meta property="og:title" content="Diasport — Amateras DJs and Friends">
+<title>Diasport — Amaterrace DJys and Friends</title>
+<meta name="description" content="Diasport — DJ event by Amaterrace DJys and Friends. Friday 27 Feb 2026, 19:00–22:00 at RecordCity, Nishi-Shinjuku, Tokyo.">
+<meta property="og:title" content="Diasport — Amaterrace DJys and Friends">
 <meta property="og:description" content="Friday 27 Feb 2026 · 19:00–22:00 · RecordCity, Nishi-Shinjuku, Tokyo · All Welcome">
 <meta property="og:image" content="https://diasport.world/flyer-original.jpg">
 <meta property="og:url" content="https://diasport.world">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Diasport — Amateras DJs and Friends">
+<meta name="twitter:title" content="Diasport — Amaterrace DJys and Friends">
 <meta name="twitter:description" content="Friday 27 Feb 2026 · 19:00–22:00 · RecordCity, Nishi-Shinjuku, Tokyo">
 <meta name="twitter:image" content="https://diasport.world/flyer-original.jpg">
 <link rel="canonical" href="https://diasport.world">
@@ -179,7 +179,7 @@ footer a{color:var(--gold-dark);text-decoration:none}
 <div id="main">
   <section class="hero">
     <div class="flyer-wrap">
-      <img src="flyer-original.jpg" alt="Diasport — Amateras DJs and Friends" width="2048" height="2048">
+      <img src="flyer-original.jpg" alt="Diasport — Amaterrace DJys and Friends" width="2048" height="2048">
     </div>
   </section>
 
