--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta name="twitter:description" content="Friday 27 Feb 2026 · 19:00–22:00 · RecordCity, Nishi-Shinjuku, Tokyo">
 <meta name="twitter:image" content="https://diasport.world/flyer-original.jpg">
 <link rel="canonical" href="https://diasport.world">
-<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%23DAA520'/></svg>">
+<link rel="icon" type="image/png" href="favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -260,7 +260,7 @@ footer a{color:var(--gold-dark);text-decoration:none}
     </div>
 
     <footer>
-      <img src="diasport-logo.jpg" alt="Diasport" class="footer-logo">
+      <img src="diasport-logo.png" alt="Diasport" class="footer-logo">
       <p>© 2026 Diasport</p>
     </footer>
   </div>
