Fix OG image URLs to use www (avoid 308 redirect breaking previews)

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <meta name="description" content="Diasport — DJ event by Amaterrace DJys and Friends. Friday 27 Feb 2026, 19:00–22:00 at RecordCity, Nishi-Shinjuku, Tokyo.">
 <meta property="og:title" content="Diasport — Amaterrace DJys and Friends">
 <meta property="og:description" content="Friday 27 Feb 2026 · 19:00–22:00 · RecordCity, Nishi-Shinjuku, Tokyo · All Welcome">
-<meta property="og:image" content="https://diasport.world/flyer-original.jpg">
-<meta property="og:url" content="https://diasport.world">
+<meta property="og:image" content="https://www.diasport.world/flyer-original.jpg">
+<meta property="og:url" content="https://www.diasport.world">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Diasport — Amaterrace DJys and Friends">
 <meta name="twitter:description" content="Friday 27 Feb 2026 · 19:00–22:00 · RecordCity, Nishi-Shinjuku, Tokyo">
-<meta name="twitter:image" content="https://diasport.world/flyer-original.jpg">
-<link rel="canonical" href="https://diasport.world">
+<meta name="twitter:image" content="https://www.diasport.world/flyer-original.jpg">
+<link rel="canonical" href="https://www.diasport.world">
 <link rel="icon" type="image/png" href="favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
